--- a/Editor/PJH.Utility.Editor.asmdef
+++ b/Editor/PJH.Utility.Editor.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "PJH.Utility",
-    "rootNamespace": "PJH.Utility",
+    "name": "PJH.Utility.Editor",
+    "rootNamespace": "PJH.Utility.Editor",
     "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:593a5b492d29ac6448b1ebf7f035ef33",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
