--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "author": {
     "name": "Parkjung2016",
     "url": "https://github.com/Parkjung2016"
+  },
+  "dependencies": {
+    "com.unity.addressables": "2.7.4"
   }
 }
